site/styles.css
* {
  box-sizing: border-box;
}

body {
  font-size: 18px;
  color: #333;
  font-family: 'AvenirLTPro-Book', sans-serif;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

main {
  display: flex;
  flex-wrap: wrap;
  padding-top: 2rem;
}

.content-open {
  position: fixed;
  overflow: hidden;
}

a:active, a:visited, a {
  color: #333;
}

h1, h3 {
  -webkit-font-smoothing: subpixel-antialiased;
  -moz-osx-font-smoothing: auto;
}

h1, h2, p {
  margin: 0;
}

h2 {
  font-size: 1.33333333333em;
  line-height: 1.66666666667em;
}

h3 {
  line-height: em; 
}

p {
  line-height: 1.44444444444em;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.header, .nav {
  padding: 2rem 4rem 1rem;
}

.header {
  width: auto;
  display: flex;
  flex-grow: 10;
  justify-content: flex-end;
  align-items: top;
  padding-right: 0;
  font-size: 18px;
  font-weight: normal;
}

.logo {
  width: 150px;
  position: absolute;
  left: 60px;
  top: 49px;
}

.header__date {
  font-weight: 500;
  font-size: 2em;
  line-height: 32px;
  position: relative;
  top: 9px;
}

.nav {
  width: 260px;
  padding-left: 2em;
}

.nav__signup {
  display: inline-block;
  height: 2.5em;
  line-height: 27px;
  width: 9em;
  padding: 0.5em;
  text-align: center;
  background-color: rgb(144,18,239);
  color: #fff;
  text-decoration: none;
  border-radius: 5px;
  align-self: center;
  margin-right: 0px;
  flex-shrink: 0;
}

.nav__signup:active, .nav__signup:visited  {
  color: #fff;
}

.nav__menu {
  background: none;
  border: none;
  padding: 0;

  display: block;
  width: 3em;
  height: 3em;
  align-self: center;
  flex-shrink: 0;
  display: none;
}

.nav__menu-icon {
  width: 100%;
  height: 100%;
  fill: #aaa;
}

.summary {
  width: 100%;
  padding: 0 4rem;
  display: flex;
  justify-content: flex-end;
}

.summary__header {
  font-weight: 400;
  font-size: 1em;
  margin-right: 2em;
  display: none;
}

.summary__list li {
  float: left;
  margin-right: 2em;
}

.summary__list li:last-child {
  margin-right: 0;
}

.information {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4rem;
  justify-content: space-between;
}

.what, .why {
  width: 30%;
}

.who, .contact {
  width: 15%;
}

.information__block h3 {
  margin-bottom: 1em;
  font-family: 'AvenirLTPro-Medium', sans-serif;
  font-weight: normal;
  font-size: 1.0em;
}

.information__block p {
  margin-bottom: 1em;
}

.information__block.contact li {
  margin-bottom: 8px;
}

.who__list-item {
  margin-bottom: 1em;
}

.who__list a {
  display: flex;
  align-items: center;
}

.who__avatar {
  width: 2em;
  height: 2em;
  margin-right: 1em;
  border-radius: 50%;
  position: relative;
  display: block;
  flex-shrink: 0;
}

.who__avatar img {
  mix-blend-mode: multiply;
  width: 100%;
  border-radius: 50%;
}

.who__avatar:before {
  position: absolute;
  width: 100%;
  height: 100%;
  content: '';
  display: block;
  background-color: rgba(144, 18, 239, 0.15);
  border-radius: 50%;
}

.shape {
  transform-origin: center center;
}


.overlay {
  display: none;
}

.overlay.open { 
  display: block;
  background: white;
  opacity: 0.7;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.content__page {
  display: none;
  width: 40.5em;
  margin: 60px auto;
  min-height: 100vh;
  position: absolute;
  top: 0;
  left: 50%;
  transform: translate(-50%, 0);
}

.content__menu-wrapper {
  display: flex;
  justify-content: space-between;
  position: absolute;
  top: -40px;
  width: 100%;
}

.content__menu {
  display: flex;
}

.content__menu-item {
  width: 70px;
  color: #333 !important;
}

.content__shapes {
  position: absolute;
  opacity: 0.25;
  width: 730px;
  top: 0px;
  left: 0px;
  z-index: -1;
}

.content__page.open {
  display: block;
}

.content__box {
  padding: 80px 0px;
  width: 25.5555555556em;
  margin: 0 auto;
}

.back {
  color: #fff !important;
}

.about {
  background-color: #9013fe;
  color: #fff;
}

.speakers {
    background-color: #ce6bdb;
    color: #fff;
}

.codeofconduct {
    background-color: #5a6378;
    color: #fff;
}

.cfp {
    background-color: #8581b0;
    color: #fff;
}

.sponsors {
  background-color: #5a6378;
  color: #fff;
}

.codeofconduct {
  background-color: #8581b0;
  color: #fff;
}

.color-5 {
  background-color: #;
  color: #fff;
}

.speaker {
  display: flex;
  flex-direction: row;
  margin-bottom: 2em;
}

.speaker:first-of-type {
  margin-top: 4em;
}

.speaker__content {
  width: 80%;
}

.speaker__name {
  margin-top: 0px;
}

.speaker__image {
  border-radius: 50%;
  width: 5em;
  margin-right: 2.22222222222em;
  align-self: flex-start;
}

.sponsor__logo {
    width: 100px;
}
.platinum {
  margin-top: 2em;
}
.sponsor__list {
  display: flex;
  align-items: baseline;
  justify-content: space-between; 
}

.sponsors a, .about a, .speakers a {
  color: #fff;
  border-bottom: 1px solid #fff;
  transition: all .2s ease-in-out;
  line-height: .8;
  text-decoration: none;
}

.sponsors a:hover, .about a:hover, .speakers a:hover {
  opacity: 0.7;
}

.sponsor__list a {
  border: none;
}


/**/
/* Responsive */
/**/

@media (max-width:1024px) and (min-width:740px) {
  .what, .why {
    width: 60%;
  }

  .who, .contact {
    width: 30%;
  }

  .why, .contact {
    margin-top: 2em;
  }
}

@media (max-width:740px) and (min-width:320px) {
    .who, .contact {
      width: 100%;
    }

    .what, .why {
      width: 100%;
    }

    .information {
      padding: 0 1.5rem;
      padding-bottom: 60px;
    }

    .information__block {
      margin-top: 2em;
    }

    #backdrop {
      height: 20vh;
    }

    .summary {
      padding: 0;
    }

    .summary__list {
      width: 100%;
      text-align: center;
    }

    .summary__list li {
      float: none;
      display: inline-block;
    }

  .content-open {
    visibility: hidden;
  }

  #backdrop {
    height: 200px;
    position: absolute;
    top: 0px;
    opacity: 0.3;
  }

  .header {
    flex-wrap: wrap;
    padding-right: 0px;
    padding-left: 0px;
    justify-content: center;
  }
  .summary {
    display: none;
  }
  .nav {
    width: 100%;
    text-align: center;
  }
  .header__date {
    font-size: 1.44444444em;
  }
  .logo {
    width: 100%;
    position: relative;
    top:0;
    left: 0;
  }
}

